--- a/About.html
+++ b/About.html
@@ -47,7 +47,12 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./cart.html"
+            <a class="nav-link" href="./Products.html"
+              ><i class="bi bi-car-front-fill"></i> Products</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Cart.html"
               ><i class="bi bi-cart-fill"></i> Your Cart</a
             >
           </li>
