--- a/Products.html
+++ b/Products.html
@@ -60,33 +60,17 @@
         </ul>
       </div>
     </nav>
-
-    <main class="homePage">
-      <header class="text-center pt-4 pb-4">
-        <h1>Welcome To Automoblox</h1>
-        <h2>Where Creativity Drives Innovation</h2>
-      </header>
-
-      <article class="row mt-4 heroContainer container">
-        <figure class="col-lg-6 order-lg-last">
-          <img src="/images/c9_large.png" alt="Hero Image" />
-        </figure>
-
-        <div class="col-lg-6 order-lg-first mb-4">
-          <p>
-            Discover a world where imagination meets engineering precision. At
-            Automoblox, we're more than just toy cars; we're creators of endless
-            possibilities. Our meticulously crafted vehicles are designed to
-            inspire creativity and spark innovation in minds of all ages. From
-            sleek sports cars to rugged trucks, each Automoblox vehicle is a
-            testament to our commitment to quality, innovation, and play.
-          </p>
-
-          <a class="actionButton" href="/About.html">Learn More</a> <a class="actionButton">View Products</a>
-        </div>
-      </article>
+    <section class="productsBanner">
+      <h1>Explore Products</h1>
+      <h2>Discover Endless Possibilities</h2>
+    </section>
+    <main>
+      <section class="row text-center pb-4" id="productCardsContainer">
+      
+      </section>
     </main>
-    <footer class="pt-4">
+
+    <footer class="pt-2">
       <div class="container">
         <section class="row">
           <div class="col-sm-6">
@@ -166,7 +150,6 @@
         </section>
       </div>
     </footer>
-    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
