--- a/cart.html
+++ b/cart.html
@@ -24,8 +24,8 @@
       <a class="navbar-brand" href="/index.html">
         <img
           src="./images/automoblox_logo.png"
-          width="100"
-          height="50"
+          width="140"
+          height="70"
           alt="Automoblox"
         />
       </a>
@@ -43,10 +43,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="./About.html"><i class="bi bi-file-text-fill"></i> About</a>
+            <a class="nav-link" href="./About.html"
+              ><i class="bi bi-file-text-fill"></i> About</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./cart.html"><i class="bi bi-cart-fill"></i> Your Cart</a>
+            <a class="nav-link" href="./Products.html"
+              ><i class="bi bi-car-front-fill"></i> Products</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Cart.html"
+              ><i class="bi bi-cart-fill"></i> Your Cart</a
+            >
           </li>
         </ul>
       </div>
@@ -153,7 +162,7 @@
           </form>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 pb-4">
           <h2>Cart</h2>
           <article id="cartContainer">
             <!--CartItems populated by JS from cartList[]-->
